--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -12,20 +12,12 @@
                  for="firstNameId">First Name</label>
           <div class="col-md-8">
             <input class="form-control"
-                   id="firstNameId"
                    type="text"
                    placeholder="First Name (required)"
                    formControlName="firstName"
-                   [ngClass]="{'is-invalid': (customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty) && !customerForm.get('firstName')?.valid }" />
+                   [ngClass]="{'is-invalid': errors['firstName'].length}" />
             <span class="invalid-feedback">
-              <ng-container *ngIf="customerForm.get('firstName')?.errors as errorObj">
-              <span *ngIf="errorObj['required']">
-                Please enter your first name.
-              </span>
-              <span *ngIf="errorObj['minlength']">
-                The first name must be longer than 3 characters.
-              </span>
-            </ng-container>
+              <span *ngIf="errors['firstName'].length">{{errors['firstName']}}</span>
             </span>
           </div>
         </div>
@@ -39,16 +31,9 @@
                    type="text"
                    placeholder="Last Name (required)"
                    formControlName="lastName"
-                   [ngClass]="{'is-invalid': (customerForm.get('lastName')?.touched || customerForm.get('lastName')?.dirty) && !customerForm.get('lastName')?.valid }" />
+                   [ngClass]="{'is-invalid':errors['lastName'].length}" />
             <span class="invalid-feedback">
-              <ng-container *ngIf="customerForm.get('lastName')?.errors as errorObj">
-                <span *ngIf="errorObj['required']">
-                  Please enter your last name.
-                </span>
-                <span *ngIf="errorObj['maxlength']">
-                  The last name must be less than 50 characters.
-                </span>
-              </ng-container>
+              <span *ngIf="errors['lastName'].length">{{errors['lastName']}}</span>
             </span>
           </div>
         </div>
@@ -64,17 +49,9 @@
                    type="email"
                    placeholder="Email (required)"
                   formControlName="email"
-                   [ngClass]="{'is-invalid': customerForm.get('emailGroup')?.errors || ((customerForm.get('emailGroup.email')?.touched || customerForm.get('emailGroup.email')?.dirty) &&
-                   !customerForm.get('emailGroup.email')?.valid )}" />
+                   [ngClass]="{'is-invalid': customerForm.get('emailGroup')?.errors || errors['email'].length}" />
             <span class="invalid-feedback">
-              <ng-container *ngIf="customerForm.get('emailGroup.email')?.errors as errorObj">
-                <span *ngIf="errorObj['required']">
-                  Please enter your email address.
-                </span>
-                <span *ngIf="errorObj['email']">
-                  Please enter a valid email address.
-                </span>
-              </ng-container>
+              <span *ngIf="errors['email'].length">{{errors['email']}}</span>
             </span>
           </div>
         </div>
@@ -88,20 +65,11 @@
                    type="email"
                    placeholder="Confirm Email (required)"
                   formControlName="confirmEmail"
-                   [ngClass]="{'is-invalid': customerForm.get('emailGroup')?.errors || ((customerForm.get('emailGroup.confirmEmail')?.touched ||
-                   customerForm.get('emailGroup.confirmEmail')?.dirty) && !customerForm.get('emailGroup.confirmEmail')?.valid) }" />
+                   [ngClass]="{'is-invalid': customerForm.get('emailGroup')?.errors || errors['confirmEmail'].length }" />
             <span class="invalid-feedback">
-              <ng-container *ngIf="customerForm.get('emailGroup.confirmEmail')?.errors as errorObj">
-                <span *ngIf="errorObj['required']">
-                  Please confirm your email address.
-                </span>
-              </ng-container>
 
-              <ng-container *ngIf="customerForm.get('emailGroup')?.errors as errorObj">
-                <span *ngIf="errorObj['emailMatch']">
-                  The confirmation does not match the email address.
-                </span>
-              </ng-container>
+              <span *ngIf="errors['confirmEmail'].length">{{errors['confirmEmail']}}</span>
+              <span *ngIf="errors['emailGroup'].length">{{errors['emailGroup']}}</span>
             </span>
           </div>
         </div>
@@ -117,14 +85,9 @@
                    type="tel"
                    placeholder="Phone"
                   formControlName="phone"
-                   [ngClass]="{'is-invalid': (customerForm.get('phone')?.touched ||
-                   customerForm.get('phone')?.dirty) && !customerForm.get('phone')?.valid }" />
+                   [ngClass]="{'is-invalid': errors['phone'].length }" />
             <span class="invalid-feedback">
-              <ng-container *ngIf="customerForm.get('phone')?.errors as errorObj">
-                <span *ngIf="errorObj['required']">
-                  Please enter your phone number.
-                </span>
-              </ng-container>
+              <span *ngIf="errors['phone'].length">{{errors['phone']}}</span>
             </span>
           </div>
         </div>
@@ -136,7 +99,7 @@
             <div class="form-check form-check-inline">
               <label class="form-check-label">
               <input class="form-check-input"
-              type="radio" value="email" (click)="setNotification('email')"
+              type="radio" value="email"
              formControlName="notification" />Email
             </label>
             </div>
@@ -144,7 +107,7 @@
             <div class="form-check form-check-inline">
               <label class="form-check-label">
               <input class="form-check-input"
-              type="radio" value="text" (click)="setNotification('text')"
+              type="radio" value="text"
              formControlName="notification" />Text
             </label>
             </div>
@@ -159,14 +122,9 @@
                    id="ratingId"
                    type="number"
                   formControlName="rating"
-                   [ngClass]="{'is-invalid': (customerForm.get('rating')?.touched ||
-                   customerForm.get('rating')?.dirty) && !customerForm.get('rating')?.valid }" />
+                   [ngClass]="{'is-invalid': errors['rating'].length }" />
             <span class="invalid-feedback">
-              <ng-container *ngIf="customerForm.get('rating')?.errors as errorObj">
-                <span *ngIf="errorObj['range']">
-                  Please enter your rating from 1 to 5.
-                </span>
-              </ng-container>
+              <span *ngIf="errors['rating'].length">{{errors['rating']}}</span>
             </span>
           </div>
         </div>
@@ -185,84 +143,80 @@
           </div>
         </div>
 
-        <!-- <div *ngIf="customer.sendCatalog">
-          <div class="form-group row mb-2">
-            <label class="col-md-2 col-form-label pt-0">Address Type</label>
-            <div class="col-md-8">
+      <div *ngIf="customerForm.get('sendCatalog')?.value">
+        <div formArrayName="addresses">
+        <div *ngFor="let address of addressList.controls;let i=index" formGroupName="{{i}}">
+              <div class="form-group row mb-2">
+               <label class="col-md-2 col-form-label pt-0">Address Type</label>
+               <div class="col-md-8">
+                <!--Make sure the name of the radio button in a form group is unique-->
               <div class="form-check form-check-inline">
-                <label class="form-check-label">
+                <label  class="form-check-label">
                   <input class="form-check-input"
-                         id="addressType1Id"
                          type="radio"
                          value="home"
-                         [(ngModel)]="customer.addressType"
-                         name="addressType"> Home
+                         formControlName="addressType"
+                         [attr.name]="'addressType'+i"> Home
                 </label>
               </div>
               <div class="form-check form-check-inline">
                 <label class="form-check-label">
                   <input class="form-check-input"
-                         id="addressType1Id"
                          type="radio"
                          value="work"
-                         [(ngModel)]="customer.addressType"
-                         name="addressType"> Work
+                         formControlName="addressType"
+                         [attr.name]="'addressType'+i"> Work
                 </label>
               </div>
               <div class="form-check form-check-inline">
                 <label class="form-check-label">
                   <input class="form-check-input"
-                         id="addressType1Id"
                          type="radio"
                          value="other"
-                         [(ngModel)]="customer.addressType"
-                         name="addressType"> Other
+                         formControlName="addressType"
+                         [attr.name]="'addressType'+i"> Other
                 </label>
               </div>
-            </div>
-          </div>
+               </div>
+             </div>
 
-          <div class="form-group row mb-2">
+               <div class="form-group row mb-2">
             <label class="col-md-2 col-form-label"
                    for="street1Id">Street Address 1</label>
             <div class="col-md-8">
               <input class="form-control"
-                     id="street1Id"
                      type="text"
                      placeholder="Street address"
-                     [(ngModel)]="customer.street1"
+                     formControlName="street1"
                      name="street1">
             </div>
-          </div>
+              </div>
 
-          <div class="form-group row mb-2">
+             <div class="form-group row mb-2">
             <label class="col-md-2 col-form-label"
                    for="street2Id">Street Address 2</label>
             <div class="col-md-8">
               <input class="form-control"
-                     id="street2Id"
                      type="text"
                      placeholder="Street address (second line)"
-                     [(ngModel)]="customer.street2"
+                     formControlName="street2"
                      name="street2">
             </div>
-          </div>
+              </div>
 
-          <div class="form-group row mb-2">
+              <div class="form-group row mb-2">
             <label class="col-md-2 col-form-label"
                    for="cityId">City, State, Zip Code</label>
             <div class="col-md-3">
               <input class="form-control"
-                     id="cityId"
                      type="text"
                      placeholder="City"
-                     [(ngModel)]="customer.city"
+                     formControlName="city"
                      name="city">
             </div>
             <div class="col-md-3">
               <select class="form-control"
-                      id="stateId"
-                      [(ngModel)]="customer.state"
+                      formControlName="state"
                       name="state">
                 <option value=""
                         disabled
@@ -280,17 +234,18 @@
             </div>
             <div class="col-md-2">
               <input class="form-control"
-                     id="zipId"
                      type="number"
                      placeholder="Zip Code"
-                     [(ngModel)]="customer.zip"
+                     formControlName="zip"
                      name="zip">
             </div>
-          </div>
-        </div> -->
+              </div>
+        </div>
+      </div>
+      </div>
 
         <div class="form-group row mb-2">
-          <div class="offset-md-2 col-md-4">
+          <div class="offset-md-2 col-md-8">
             <button class="btn btn-primary mr-3"
                     type="submit"
                     style="width:80px"
@@ -300,9 +255,11 @@
             </button>
             <button class="btn btn-primary mr-3"
             (click)="populateTestData()"
-           >
-      Test Data
-    </button>
+           >Test Data</button>
+
+           <button class="btn btn-primary mr-3"
+           (click)="addNewAddress()"
+          >Add New Address</button>
           </div>
         </div>
       </form>
